# opengl_glfw_template

./: .gitignore  README.md
common/: loadShaders.h
glfw-3.1.1/examples/: boing.c
glfw-3.1.1/include/GLFW/: glfw3.h
template/: CMakeLists.txt  main.cpp
